--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="stylesheet" href="./style.css" />
+
+
+    <link rel="stylesheet" href="./smp.css">
+
+    <link rel="stylesheet" href="./lgp.css">
+
+    <link rel="stylesheet" href="./lgst.css">
+
+    <link rel="stylesheet" href="./desk.css">
+    <link rel="stylesheet" href="./tpsl.css">
+<link rel="stylesheet" href="./lgs.css">
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./style.css" />
+    
 
     <title>Frontend Mentor | Loopstudios landing page</title>
   </head>
@@ -44,9 +56,7 @@
         <div class="img-wrapper">
           <img
             src="./images/desktop/image-interactive.jpg"
-            alt="man wearing headset"
-            width="600px"
-            height="300px"
+            alt="man wearing headset" class="bio-image"
           />
         </div>
 
@@ -66,7 +76,7 @@
 
     <section id="secondSection">
       <div id="second-header">
-        <h1>Our creations</h1>
+        <h1 class="creation">Our creations</h1>
 
         <div class="see-all">See all</div>
       </div>
@@ -88,6 +98,7 @@
         <div class="box-five">
           <p>From up above VR</p>
         </div>
+
         <div class="box-six">
           <p>Pocket borealis</p>
         </div>
@@ -131,7 +142,7 @@
 
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Akintayo Oluwkorede</a>.
+      >. Coded by <a href="#">Akintayo Oluwakorede</a>.
     </footer>
   </body>
 </html>
