--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
           <div class="footer-logo"></div>
 
           <nav class="footer-navbar">
-            <div>About</div>
-            <div>Careers</div>
-            <div>Events</div>
-            <div>Products</div>
-            <div>Support</div>
+            <div class="f-nav">About</div>
+            <div class="f-nav">Careers</div>
+            <div class="f-nav">Events</div>
+            <div class="f-nav">Products</div>
+            <div class="f-nav">Support</div>
           </nav>
         </div>
 
